[project]
name = "ccsess"
version = "0.1.0"
description = "Rescue, search, resume, and mine Claude Code sessions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "dominic-righthere", email = "64965775+dominic-righthere@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []
keywords = ["claude", "claude-code", "cli", "sessions", "transcripts", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/dominic-righthere/ccsess"
Repository = "https://github.com/dominic-righthere/ccsess"
Issues = "https://github.com/dominic-righthere/ccsess/issues"

[project.scripts]
ccsess = "ccsess.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = "src" }]
